5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1636_869.log
== TEST (2019-04-14 23:46:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("Qual o valor: "))
if (valor>=200):
	preco = valor - (5/100 * valor)
else:
	preco = valor
	print(preco)
-- ERROR:
File "XXXX", line 7
    if (x = ce - bf / ae - bd) ; (y = af - cd / ae - bd):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:46:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("Qual o valor: "))
if (valor>=200):
	preco = valor - (5/100 * valor)
else:
	preco = valor
	print(preco)
-- EXECUTION TIME:
0.245509
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:

-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:46:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("Qual o valor: "))
if (valor>=200):
	preco = valor - (5/100 * valor)
else:
	preco = valor
	print(preco)
-- EXECUTION TIME:
0.162973
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:

-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:47:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("Qual o valor: "))
if (valor>=200):
	preco = valor - (5/100) * valor
else:
	preco = valor
	print(preco)
-- ERROR:
File "XXXX", line 7
    if (x = ce - bf / ae - bd) ; (y = af - cd / ae - bd):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:47:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("Qual o valor: "))
if (valor>=200):
	preco = valor - (5/100) * valor
else:
	preco = valor
	print(preco)
-- EXECUTION TIME:
0.143843
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:

-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:48:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("Qual o valor: "))
if (valor>=200):
	preco = valor - (5/100 * valor)
else:
	preco = valor
	print(round(preco, 2))
-- ERROR:
File "XXXX", line 7
    if (x = ce - bf / ae - bd) ; (y = af - cd / ae - bd):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:48:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("Qual o valor: "))
if (valor>=200):
	preco = valor - (5/100 * valor)
else:
	preco = valor
	print(round(preco, 2))
-- EXECUTION TIME:
0.223455
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:

-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:48:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("Qual o valor: "))
if (valor>=200):
	preco = valor - (5/100) * valor
else:
	preco = valor
	print(round(preco, 2))
-- ERROR:
File "XXXX", line 7
    if (x = ce - bf / ae - bd) ; (y = af - cd / ae - bd):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:48:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("Qual o valor: "))
if (valor>=200):
	preco = valor - (5/100) * valor
else:
	preco = valor
	print(round(preco, 2))
-- EXECUTION TIME:
0.198733
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:

-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:48:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("Qual o valor: "))
if (valor>=200):
	preco = valor - (5/100) * valor
else:
	preco = valor
	print(round(preco, 2))
-- EXECUTION TIME:
0.2121
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:

-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:48:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("Qual o valor: "))
if (valor>=200):
	preco = valor - (5/100) * valor
else:
	preco = valor
	print(round(preco, 2))
-- ERROR:
File "XXXX", line 7
    if (x = ce - bf / ae - bd) ; (y = af - cd / ae - bd):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:51:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("Qual o valor: "))
if (valor>=200):
	preco = valor - (5/100) * valor
else:
	preco = valor
	print(round(preco, 2))
-- ERROR:
File "XXXX", line 7
    if (x = ce - bf / ae - bd) ; (y = af - cd / ae - bd):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:51:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor = float(input("Qual o valor: "))
if (valor>=200):
	preco = valor - (5/100) * valor
else:
	preco = valor
	print(round(preco, 2))
-- ERROR:
File "XXXX", line 7
    if (x = ce - bf / ae - bd) ; (y = af - cd / ae - bd):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
